--- a/Front-UMI/src/styles.scss
+++ b/Front-UMI/src/styles.scss
@@ -1,13 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
   font-weight: normal;
 }
 
-
+body {
+  margin: 0;
+  background-color: #eff3f8;
+}
 
 :root
 {
   --primary: darkcyan;
 }
+
