--- a/Front-UMI/src/app/projects/project/models/models.component.html
+++ b/Front-UMI/src/app/projects/project/models/models.component.html
@@ -1,2 +1,25 @@
-<app-navbar></app-navbar>
-<p>models works!</p>
+<app-navbar style="position:fixed"></app-navbar>
+<div class="dashboard-content">
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
+      <h1 class="text-3xl font-bold text-gray-900">Models</h1>
+      <div class="mt-2 flex items-center text-sm text-gray-500">
+        Manage your models in your ressourcepack
+      </div>
+    </div>
+
+  </header>
+  <main>
+    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+      <!-- Replace with your content -->
+      <div class="px-4 py-6 sm:px-0">
+        <div class="bg-white border-round p-4">
+          <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
+        </div>
+
+      </div>
+      <!-- /End replace -->
+    </div>
+  </main>
+</div>
+
