--- a/Front-UMI/src/app/projects/project/project.component.html
+++ b/Front-UMI/src/app/projects/project/project.component.html
@@ -1,3 +1,44 @@
-<app-navbar></app-navbar>
-<p>project works!</p>
-{{id}}
+<app-navbar style="position: fixed"></app-navbar>
+<div class="dashboard-content">
+  <header class="bg-white shadow">
+    <div class="lg:flex lg:items-center lg:justify-between">
+    <div class="max-w-7xl mt-5 flex lg:mt-0 lg:ml-4 mx-auto py-4 px-4 sm:px-6 lg:px-8">
+      <h1 class="text-3xl font-bold text-gray-900">{{ projectService.selectedProject.name }}</h1>
+      <div class="mt-2 ml-3 flex items-center text-sm text-gray-500">
+        Dashboard
+      </div>
+    </div>
+    <div class="mt-5 flex lg:mt-0 lg:ml-4 mr-3">
+      <span class="hidden sm:block">
+        <a routerLink="../projects" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64c17.67 0 32-14.33 32-32S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256c0 53.02 42.98 96 96 96h64c17.67 0 32-14.33 32-32S177.7 416 160 416zM502.6 233.4l-128-128c-12.51-12.51-32.76-12.49-45.25 0c-12.5 12.5-12.5 32.75 0 45.25L402.8 224H192C174.3 224 160 238.3 160 256s14.31 32 32 32h210.8l-73.38 73.38c-12.5 12.5-12.5 32.75 0 45.25s32.75 12.5 45.25 0l128-128C515.1 266.1 515.1 245.9 502.6 233.4z"/>
+          </svg>
+          Exit
+        </a>
+     </span>
+
+      <span class="sm:ml-3">
+      <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <!-- Heroicon name: solid/check -->
+        <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+        </svg>
+        Generate
+      </button>
+    </span>
+    </div>
+    </div>
+  </header>
+  <main>
+    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+      <!-- Replace with your content -->
+      <div class="px-4 py-6 sm:px-0">
+        <div class="bg-white border-round p-4">
+          <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
+        </div>
+
+      </div>
+      <!-- /End replace -->
+    </div>
+  </main>
+</div>
