refacto items + creation fonctionelle

--- a/Front-UMI/src/app/projects/project/blocks/blocks.component.html
+++ b/Front-UMI/src/app/projects/project/blocks/blocks.component.html
@@ -2,9 +2,9 @@
 <div class="dashboard-content">
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
-      <h1 class="text-3xl font-bold text-gray-900">Models</h1>
+      <h1 class="text-3xl font-bold text-gray-900">Blocks</h1>
       <div class="mt-2 flex items-center text-sm text-gray-500">
-        Manage your models in your ressourcepack
+        Manage your blocks
       </div>
     </div>
 
