--- a/Front-UMI/src/app/projects/project/items/create-item/create-item.component.html
+++ b/Front-UMI/src/app/projects/project/items/create-item/create-item.component.html
@@ -1,1 +1,66 @@
-<p>create-item works!</p>
+<app-navbar style="position:fixed"></app-navbar>
+<div class="dashboard-content">
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
+      <h1 class="text-3xl font-bold text-gray-900">Items</h1>
+      <div class="mt-2 flex items-center text-sm text-gray-500">
+        Manage your items in the game
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+      <h3 class="text-2xl font-bold">Create a new item</h3>
+      <div class="col-span-6 sm:col-span-3 w-3 mt-3">
+        <label for="item-name" class="block text-sm font-medium text-gray-700">Item name</label>
+        <input type="text" name="item-name" id="item-name" [(ngModel)]="itemField.name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+      <div class="col-span-6 sm:col-span-3 w-3 mt-3">
+        <label for="type" class="block text-sm font-medium text-gray-700">Type</label>
+        <select [(ngModel)]="itemField.type" [value]="itemField.type" id="type" name="type" autocomplete="type-name" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+          <option *ngFor="let itemType of itemTypes" >{{ itemType }}</option>
+        </select>
+      </div>
+      <div class="col-span-6 sm:col-span-3 w-3 mt-3">
+        <label for="durability" class="block text-sm font-medium text-gray-700">Durability</label>
+        <input type="text" name="durability" id="durability" [(ngModel)]="itemField.durability" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+      <div class="col-span-6 sm:col-span-3 w-3 mt-3">
+        <label class="block text-sm font-medium text-gray-700">Custom tags</label>
+        <div *ngFor="let customTag of itemField.customTags" class="mt-1 flex rounded-md">
+          <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-sm">{{customTag.customTagProperty}}</span>
+          <span class="inline-flex items-center px-3 border border-r-0 border-gray-300 bg-gray-50 text-sm">{{customTag.value}}</span>
+          <button (click)="removeCustomTag(customTag)" type="button" class="bg-white py-2 px-3 border border-gray-300 rounded-r-md shadow-sm hover:bg-gray-50 focus:outline-none">
+            <svg style="transform: scale(1.2)" xmlns="http://www.w3.org/2000/svg" class="h-5" viewBox="0 0 20 20" fill="darkred">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="mt-1 flex rounded-md">
+        <select [(ngModel)]="customTagField" id="customTag" name="type" autocomplete="type-name" class="mt-1 block w-3 py-2 px-3 border border-gray-300 bg-white rounded-l-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+          <option *ngFor="let customTagProperty of customTagsPropertys" >{{ customTagProperty.name }}</option>
+        </select>
+        <input [(ngModel)]="customValueField" name="addServer" type="text" class="mt-1 w-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300">
+        <button (click)="addCustomTag()" type="button" class="inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-r-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+          </svg>
+          Add
+        </button>
+      </div>
+      <button (click)="save()" type="button" class="mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        Create
+      </button>
+      <button routerLink="/items" type="button" class="mt-4 ml-2 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+        </svg>
+        Cancel
+      </button>
+    </div>
+  </main>
+</div>
