--- a/Front-UMI/src/app/projects/project/config/config.component.html
+++ b/Front-UMI/src/app/projects/project/config/config.component.html
@@ -39,6 +39,12 @@
                   Add
                 </button>
               </div>
+              <button (click)="save()" type="button" class="mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4" />
+                </svg>
+                Save
+              </button>
             </div>
           </form>
         </div>
