--- a/Front-UMI/src/app/projects/project/items/items.component.html
+++ b/Front-UMI/src/app/projects/project/items/items.component.html
@@ -15,17 +15,28 @@
       <div class="px-4 py-6 sm:px-0">
         <div class="bg-white border-round p-4">
           <section class="text-gray-600 body-font">
-            <!-- <div *ngIf="isCreating; else listItems">
-              <app-create-item [inputItem]="currentEditing" (createItemEvent)="newItem($event)" (exitItemEvent)="updateEdit($event)"></app-create-item>
-            </div> -->
-            <div *ngIf="isCreating; else listItems"></div>
+            <button routerLink="/items/new" class="flex mb-4 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
+              <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+              </svg>
+              Create item
+            </button>
+            <div *ngIf="isNoItems; else listItems">
+              <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+                <div class="max-w-screen-sm sm:text-center sm:mx-auto">
+                  <a href="/" aria-label="View" class="inline-block mb-5 rounded-full sm:mx-auto">
+                    <div class="flex items-center justify-center w-16 h-16 mb-4 rounded-full bg-indigo-50">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M492.7 42.75C517.7 67.74 517.7 108.3 492.7 133.3L436.3 189.7L322.3 75.72L378.7 19.32C403.7-5.678 444.3-5.678 469.3 19.32L492.7 42.75zM44.89 353.2L299.7 98.34L413.7 212.3L158.8 467.1C152.1 473.8 143.8 478.7 134.6 481.4L30.59 511.1C22.21 513.5 13.19 511.1 7.03 504.1C.8669 498.8-1.47 489.8 .9242 481.4L30.65 377.4C33.26 368.2 38.16 359.9 44.89 353.2zM249.4 103.4L103.4 249.4L16 161.9C-2.745 143.2-2.745 112.8 16 94.06L94.06 16C112.8-2.745 143.2-2.745 161.9 16L181.7 35.76C181.4 36.05 181 36.36 180.7 36.69L116.7 100.7C110.4 106.9 110.4 117.1 116.7 123.3C122.9 129.6 133.1 129.6 139.3 123.3L203.3 59.31C203.6 58.99 203.1 58.65 204.2 58.3L249.4 103.4zM453.7 307.8C453.4 308 453 308.4 452.7 308.7L388.7 372.7C382.4 378.9 382.4 389.1 388.7 395.3C394.9 401.6 405.1 401.6 411.3 395.3L475.3 331.3C475.6 330.1 475.1 330.6 476.2 330.3L496 350.1C514.7 368.8 514.7 399.2 496 417.9L417.9 496C399.2 514.7 368.8 514.7 350.1 496L262.6 408.6L408.6 262.6L453.7 307.8z" fill="#9ca3af"/>
+                      </svg>
+                    </div>
+                  </a>
+                  <h2 class="mb-4 font-sans text-3xl font-bold tracking-tight text-gray-600 sm:text-4xl sm:leading-none">
+                    0 items
+                  </h2>
+                </div>
+              </div>
+            </div>
             <ng-template #listItems>
-              <button routerLink="/items/new" class="flex mb-4 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
-                </svg>
-                Create item
-              </button>
               <div class="flex flex-wrap -m-4">
                   <div *ngFor="let item of itemService.itemList; let i = index" class="xl:w-1/4 md:w-1/2 p-4">
                     <div class="border border-gray-200 p-6 rounded-lg">
@@ -285,6 +296,7 @@
                           <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                         </svg>
                       </button>
+                      <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
                     </div>
                   </div>
                 </div>
