--- a/Front-UMI/src/app/projects/project/models/model-select/model-select.component.html
+++ b/Front-UMI/src/app/projects/project/models/model-select/model-select.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="mb-3 f inline-flex items-center px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+<button (click)="addModel()" type="button" class="mb-3 f inline-flex items-center px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
   <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
     <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
   </svg>
