--- a/Front-UMI/src/app/projects/project/project.component.html
+++ b/Front-UMI/src/app/projects/project/project.component.html
@@ -2,7 +2,7 @@
   <header class="bg-white shadow">
     <div class="lg:flex lg:items-center lg:justify-between">
     <div class="max-w-7xl mt-5 flex lg:mt-0 lg:ml-4 mx-auto py-4 px-4 sm:px-6 lg:px-8">
-      <h1 class="text-3xl font-bold text-gray-900">{{ projectService.selectedProject.name }}</h1>
+      <h1 class="text-3xl font-bold text-gray-900">{{ projectService.selectedProject?.name }}</h1>
       <div class="mt-2 ml-3 flex items-center text-sm text-gray-500">
         Dashboard
       </div>
