--- a/Front-UMI/src/app/projects/project/items/create-item/create-item.component.html
+++ b/Front-UMI/src/app/projects/project/items/create-item/create-item.component.html
@@ -55,7 +55,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
           </svg>
           Select model
-        </button><div *ngIf="itemModel!=null">{{itemModel.texturePath}}</div>
+        </button><div *ngIf="itemField.model!=null">{{itemField.model.texturePath}}</div>
       </div>
       <button (click)="save()" type="button" class="mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
