refacto: changement routing/navbar + suppr .spec + début appels API

--- a/Front-UMI/src/app/navbar/navbar.component.scss
+++ b/Front-UMI/src/app/navbar/navbar.component.scss
@@ -37,6 +37,10 @@
   background-color: #2d3852;
 }
 
+.active-nav {
+  background-color: #314679;
+}
+
 .navigation-item-title {
   font-size: 12px;
   font-weight: 600;
