--- a/Front-UMI/src/app/projects/project/items/items.component.html
+++ b/Front-UMI/src/app/projects/project/items/items.component.html
@@ -15,7 +15,7 @@
       <div class="px-4 py-6 sm:px-0">
         <div class="bg-white border-round p-4">
           <section class="text-gray-600 body-font">
-            <button routerLink="/items/new" class="flex mb-4 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
+            <button routerLink="/app/items/new" class="flex mb-4 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">
               <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
               </svg>
