--- a/Front-UMI/src/app/navbar/navbar.component.html
+++ b/Front-UMI/src/app/navbar/navbar.component.html
@@ -7,13 +7,13 @@
   </a>
   <div class="w-full px-2">
     <div class="flex flex-col items-center w-full mt-3 border-t border-gray-700">
-      <a routerLink="/project" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300">
+      <a routerLinkActive="active-nav" routerLink="/app/dashboard" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300">
         <svg class=" h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
         </svg>
         <span class="ml-2 text-sm font-medium">Dasboard</span>
       </a>
-      <a routerLink="/config" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
+      <a routerLinkActive="active-nav" routerLink="/app/config" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
         <svg class=" h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path>
         </svg>
@@ -21,17 +21,17 @@
       </a>
     </div>
     <div class="flex flex-col items-center w-full mt-2 border-t border-gray-700">
-      <a routerLink="/blocks" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
+      <a routerLinkActive="active-nav" routerLink="/app/blocks" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
         <svg style="transform: scale(0.90);" class="h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M172.1 40.16L268.1 3.76C280.9-1.089 295.1-1.089 307.9 3.76L403.9 40.16C425.6 48.41 440 69.25 440 92.52V204.7C441.3 205.1 442.6 205.5 443.9 205.1L539.9 242.4C561.6 250.6 576 271.5 576 294.7V413.9C576 436.1 562.9 456.2 542.5 465.1L446.5 507.3C432.2 513.7 415.8 513.7 401.5 507.3L288 457.5L174.5 507.3C160.2 513.7 143.8 513.7 129.5 507.3L33.46 465.1C13.13 456.2 0 436.1 0 413.9V294.7C0 271.5 14.39 250.6 36.15 242.4L132.1 205.1C133.4 205.5 134.7 205.1 136 204.7V92.52C136 69.25 150.4 48.41 172.1 40.16V40.16zM290.8 48.64C289 47.95 286.1 47.95 285.2 48.64L206.8 78.35L287.1 109.5L369.2 78.35L290.8 48.64zM392 210.6V121L309.6 152.6V241.8L392 210.6zM154.8 250.9C153 250.2 150.1 250.2 149.2 250.9L70.81 280.6L152 311.7L233.2 280.6L154.8 250.9zM173.6 455.3L256 419.1V323.2L173.6 354.8V455.3zM342.8 280.6L424 311.7L505.2 280.6L426.8 250.9C425 250.2 422.1 250.2 421.2 250.9L342.8 280.6zM528 413.9V323.2L445.6 354.8V455.3L523.2 421.2C526.1 419.9 528 417.1 528 413.9V413.9z" fill="#9ca3af"/>
         </svg>
         <span class="ml-2 text-sm font-medium">Blocks</span>
       </a>
-      <a routerLink="/items" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
+      <a routerLinkActive="active-nav" routerLink="/app/items" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
         <svg style="transform: scale(0.90);" class=" h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M492.7 42.75C517.7 67.74 517.7 108.3 492.7 133.3L436.3 189.7L322.3 75.72L378.7 19.32C403.7-5.678 444.3-5.678 469.3 19.32L492.7 42.75zM44.89 353.2L299.7 98.34L413.7 212.3L158.8 467.1C152.1 473.8 143.8 478.7 134.6 481.4L30.59 511.1C22.21 513.5 13.19 511.1 7.03 504.1C.8669 498.8-1.47 489.8 .9242 481.4L30.65 377.4C33.26 368.2 38.16 359.9 44.89 353.2zM249.4 103.4L103.4 249.4L16 161.9C-2.745 143.2-2.745 112.8 16 94.06L94.06 16C112.8-2.745 143.2-2.745 161.9 16L181.7 35.76C181.4 36.05 181 36.36 180.7 36.69L116.7 100.7C110.4 106.9 110.4 117.1 116.7 123.3C122.9 129.6 133.1 129.6 139.3 123.3L203.3 59.31C203.6 58.99 203.1 58.65 204.2 58.3L249.4 103.4zM453.7 307.8C453.4 308 453 308.4 452.7 308.7L388.7 372.7C382.4 378.9 382.4 389.1 388.7 395.3C394.9 401.6 405.1 401.6 411.3 395.3L475.3 331.3C475.6 330.1 475.1 330.6 476.2 330.3L496 350.1C514.7 368.8 514.7 399.2 496 417.9L417.9 496C399.2 514.7 368.8 514.7 350.1 496L262.6 408.6L408.6 262.6L453.7 307.8z" fill="#9ca3af"/>
         </svg>
         <span style="transform: translateX(4px)" class="ml-2 text-sm font-medium">Items</span>
       </a>
-      <a routerLink="/models" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
+      <a routerLinkActive="active-nav" routerLink="/app/models" class="flex items-center w-full h-12 px-3 mt-2 rounded hover-nav hover:text-gray-300" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 stroke-current" fill="currentColor" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M224 263.3C224.2 233.3 238.4 205.2 262.4 187.2L499.1 9.605C517.7-4.353 543.6-2.965 560.7 12.9C577.7 28.76 580.8 54.54 568.2 74.07L406.5 324.1C391.3 347.7 366.6 363.2 339.3 367.1L224 263.3zM320 400C320 461.9 269.9 512 208 512H64C46.33 512 32 497.7 32 480C32 462.3 46.33 448 64 448H68.81C86.44 448 98.4 429.1 96.59 411.6C96.2 407.8 96 403.9 96 400C96 339.6 143.9 290.3 203.7 288.1L319.8 392.5C319.9 394.1 320 397.5 320 400V400z"/></svg>
         <span style="transform: translateX(4px)" class="ml-2 text-sm font-medium">Models</span>
       </a>
